Cleaned up sent page.

--- a/SFM_App/Views/Home/Sent.cshtml
+++ b/SFM_App/Views/Home/Sent.cshtml
@@ -2,4 +2,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Your message has been sent</h2>
+    <!-- ========== FULLPAGE HEADER ========== -->
+<div id="faqwrap">
+    <div class="container">
+        <div class="row">
+            <h1><b>Thanks</b></h1>
+        </div>
+    </div>
+</div>
+<!-- /FULLPAGE HEADER  -->
+<!-- ========== DESCRIPTION ========== -->
+<div class="container sinfo">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+            <h3 class="text-center">Your message has been sent.</h3>
+        </div>
+    </div>
+</div>
+<!-- /DESCRIPTION -->
