All text edited

--- a/SFM_App/Views/Home/Services.cshtml
+++ b/SFM_App/Views/Home/Services.cshtml
@@ -24,40 +24,37 @@
             <div class="col-lg-4">
                 <img src="~/Images/icons/mic.svg">
                 <h4>Consult</h4>
-                <p>Give us a shout! we'll give you more information about the solutions we provide to help you make a decesion for your new system.</p>
+                <p>Give us a shout! We'll give you more information about the solutions we provide to help you make a decision for your new system.</p>
             </div>
 
             <div class="col-lg-4">
                 <img src="~/Images/icons/search.svg">
                 <h4>Discover</h4>
-                <p>We will work with you to find all the quirks about your business that makes it unique and use that information to create you the perfect system for your busisness needs</p>
+                <p>We consult with you to discover all the quirks about your business that make it unique, and use that information to create the perfect system for your business needs.</p>
             </div>
 
             <div class="col-lg-4">
                 <img src="~/Images/icons/girl.svg">
                 <h4>Collaborate</h4>
-                <p>
-                    We work with you through the whole process of developing your new amazing system. By the end you'll have recieved so much information you can probably start
-                    your own development company!
-                </p>
-            </div><
+                <p>We work with you through the whole process of developing your amazing new system. From start to finish you'll have a complete understanding of your new system.</p>
+            </div>
 
             <div class="col-lg-4">
                 <img src="~/Images/icons/rocket.svg">
                 <h4>Speed and Testing</h4>
-                <p>We take pride in delevering complete projects as fast as possible. Once we get our talons on a project we work as fast as the Peregrine Falcon</p>
+                <p>We take pride in delivering complete projects as fast as possible.</p>
             </div>
 
             <div class="col-lg-4">
                 <img src="~/Images/icons/touch.svg">
                 <h4>Responsive</h4>
-                <p>our systems work flawlessly on all types and sizes of devices.</p>
+                <p>Our systems work flawlessly on all types and sizes of devices.</p>
             </div>
 
             <div class="col-lg-4">
                 <img src="~/Images/icons/google.svg">
                 <h4>Search Engine Optimization</h4>
-                <p>All our sites are built with search engine friendly code.</p>
+                <p>All of our sites are built with search engine friendly code.</p>
             </div>
 
         </div>
