--- a/SFM_App/Views/Home/Team.cshtml
+++ b/SFM_App/Views/Home/Team.cshtml
@@ -16,11 +16,10 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h4>
-                    <b>SignalFyre</b> is a web development partnership. We focus on custome business web apps but we also dabble in making
-                    amazing corporate or marketing website for you business <p>
-                        Each of our endeavours is guided by a strong sense of craftsmanship
-                        and passion for the web. We strive to create meaning and value for our customers and their users and seek to imbue our
-                        products with a sense of wonder.
+                    <b>SignalFyre</b> is a web development partnership. We focus on customer business web apps but 
+                    we also dabble in making amazing corporate or marketing websites for businesses.
+                    Each of our endeavors is guided by a strong sense of craftsmanship and passion for the web.
+                    We strive to create meaning and value for our customers and their users, and seek to imbue our products with a sense of wonder.
                 </h4>
             </div>
         </div>
