--- a/SFM_App/Views/Shared/_Layout.cshtml
+++ b/SFM_App/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                 <h5 class="centered">Let's talk</h5>
                 <br>
                 <div class="col-lg-4">
-                    <p>Want to be direct? give us a shout via email or phone.</p>
+                    <p>Want to be direct? Give us a shout via email or phone.</p>
                     <p>
                         <small>
                             p: 780-231-8398<br />
