Index team button bug
Was pointed at a page that did not exist.

--- a/SFM_App/Views/Home/Index.cshtml
+++ b/SFM_App/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
 		    <h3>Welcome to our brand new site.</h3>
 		    <p>While you're here, why not take a look at the partnership behind SignalFyre? Our developer duo has a combined 8 years of experience in the realm of IT and web development.</p>
 		    <br>
-		    <a href="team.html"><button class="btn btn-embossed btn-primary">Meet Our Team</button></a>
+            <a href="contact.html">@Html.ActionLink("Meet Our Team", "Team", "Home", new { area = "" }, new { @class = "btn btn-embossed btn-primary" })</a>
 	    </div>
     </div>
     <!-- /CALL TO ACTION -->
