--- a/SFM_App/Views/Home/Index.cshtml
+++ b/SFM_App/Views/Home/Index.cshtml
@@ -14,10 +14,10 @@
                     <div class="caption general_caption lfb" data-x="-432" data-y="294" data-speed="2600" data-endspeed="1000" data-start="900" data-end="13900" data-easing="easeOutExpo" data-endeasing="easeInExpo">
                         <img class="img-responsive" src="~/images/slideshow/sld1_bg3.png" alt=""></div>
                     <div class="caption general_caption pst_media12 lft"  data-x="58" data-y="119" data-speed="2200" data-endspeed="900" data-start="800" data-end="14000" data-easing="easeOutExpo" data-endeasing="easeInBack">
-                        <h1 class="bold">TEST <b></b>TEST</h1>
+                        <h1 class="bold">WRITE <b></b>SOMETHING</h1>
                     </div>
                     <div class="caption general_caption pst_media lft"  data-x="58" data-y="175" data-speed="2200" data-endspeed="900" data-start="600" data-end="14100" data-easing="easeOutExpo" data-endeasing="easeInBack">
-                        <h2>**WRITE SOMETHING HERE**</h2>
+                        <h2>HERE</h2>
                     </div>
                     
                     <div class="caption general_caption lfb" data-x="593" data-y="5" data-speed="4000" data-endspeed="1000" data-start="100" data-end="14200" data-easing="easeOutElastic" data-endeasing="easeInExpo">
@@ -112,12 +112,11 @@
     <!-- /SERVICES -->
 
     <!-- ========== SPACER ========== -->
-    <div id="sp1">
-        <div class="container">
-            <div class="row">
-                <h3>We Craft Awesome Sites</h3>
-                <img class="img-responsive" src="~/images/half-mac.png">
-            </div>
+<div id="aboutwrap">
+    <div class="container">
+        <div class="row">
+            <h1><br /> <b>WRITE</b> SOMETHING<br /> Here</h1>
         </div>
     </div>
+</div>
     <!-- /SPACER -->
