--- a/SFM_App/Views/Home/Services.cshtml
+++ b/SFM_App/Views/Home/Services.cshtml
@@ -108,7 +108,7 @@
                         var myDoughnut = new Chart(document.getElementById("canvas2").getContext("2d")).Doughnut(doughnutData);
                     </script>
                 }
-                <p><b>Desing</b></p>
+                <p><b>Graphic Design</b></p>
             </div>
 
             <!-- Third Chart -->
