--- a/SFM_App/Views/Home/Contact.cshtml
+++ b/SFM_App/Views/Home/Contact.cshtml
@@ -20,8 +20,7 @@
                     <img src="~/Images/icons/mail.svg" alt="">
                 </div>
                 <p>
-                    colby.armstrong@signalfyre.ca<br />
-                    connor.england@signalfyre.ca
+                    colby.armstrong@signalfyre.ca
                 </p>
                 <hr>
                 <div class="cinfo">
