--- a/SFM_App/Views/Home/Index.cshtml
+++ b/SFM_App/Views/Home/Index.cshtml
@@ -9,15 +9,17 @@
 	</div>
     <!-- /SPACER -->
 	
+	
     <!-- ========== CALL TO ACTION ========== -->
+	@*
     <div id="cta">
 	    <div class="container centered">
-		    <h3>Welcome to our brand new site.</h3>
-		    <p>While you're here, why not take a look at the partnership behind SignalFyre? Our developer duo has a combined 8 years of experience in the realm of IT and web development.</p>
-		    <br>
+		    <p>While you're here, why not take a look at the Developers behind SignalFyre?
+			<br>
             <a href="contact.html">@Html.ActionLink("Meet Our Team", "Team", "Home", new { area = "" }, new { @class = "btn btn-embossed btn-primary" })</a>
 	    </div>
     </div>
+	*@
     <!-- /CALL TO ACTION -->
 	
     <!-- ========== SERVICES ========== -->
