--- a/SFM_App/Views/Home/Team.cshtml
+++ b/SFM_App/Views/Home/Team.cshtml
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <h1>
-                    <b>8 years</b><br />
-                    of combined IT and web development experience
+                    <b>6 years</b><br />
+                    IT and Web Development Experience
                 </h1>
             </div>
         </div>
@@ -16,8 +16,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h4>
-                    <b>SignalFyre</b> is a web development partnership. We focus on customer business web apps but 
-                    we also dabble in making amazing corporate or marketing websites for businesses.
+                    <b>SignalFyre</b> is a web development company which focuses on custom business web apps.
                     Each of our endeavors is guided by a strong sense of craftsmanship and passion for the web.
                     We strive to create meaning and value for our customers and their users, and seek to imbue our products with a sense of wonder.
                 </h4>
@@ -30,7 +29,7 @@
     <!-- ========== SKILLS AND EXP ========== -->
     <div class="container">
         <div class="row sinfo centered">
-            <div class="col-lg-6">
+            @*<div class="col-lg-6">
                 <img class="img-circle" src="~/Images/pic.jpg" width="100" height="100" alt="">
                 <h5>Connor England</h5>
                 <p>
@@ -44,21 +43,21 @@
                 <p>
                     <strong>Experience:</strong> 2 Years Web Deveopment, Computer Engineering Technologist Diploma - NAIT
                 </p>
-            </div>
+            </div>*@
 
-            <div class="col-lg-6">
+            <div class="col-lg-12">
                 <img class="img-circle" src="~/Images/pic2.jpg" width="100" height="100" alt="">
                 <h5>Colby Armstrong</h5>
                 <p>
-                    Colby has 4 years of experience in the IT field, including working on major contracts for the Government of
-                    Alberta as a Team Lead to deploy close to 10,000 computers across southern Alberta. He is currently working
-                    as a Technology Coordinator and ASP.NET developer.
+                    Colby has 6 years of experience in the IT field, including working on major contracts for the Government of
+                    Alberta as a Team Lead to deploy 10,000 computers across southern Alberta. He is currently working
+                    as a Lead ASP.NET developer.
                 </p>
                 <p>
                     <strong>Skills:</strong> ASP.Net, C#, Java, Git, HTML, JS, CSS, MySQL, LinQ, jQuery
                 </p>
                 <p>
-                    <strong>Experience:</strong> 4 Years of IT Services, Computer Software Development Student - NAIT
+                    <strong>Experience:</strong> 6 Years of IT Services, Computer Software Development Student - NAIT
                 </p>
             </div>
 
