--- a/SFM_App/Views/Home/Portfolio.cshtml
+++ b/SFM_App/Views/Home/Portfolio.cshtml
@@ -1,65 +1,4 @@
-﻿<!-- ========== CHIP DESTROYER ========== -->
-<div>
-    <div class="container">
-        <div class="row centered">
-            <br>
-            <br>
-            <div class="col-lg-8 col-lg-offset-2">
-                <h3>CHIP DESTROYER</h3>
-                <p class="lead">
-                    Chip Destroyer is a locally owned
-                    and operated windshield repair service. They are unique
-                    in that they offer subscription plans and will drive to any
-                    location to repair your windshield.
-                </p>
-            </div>
-            <br>
-
-            <div class="col-lg-10 col-lg-offset-1">
-                <img class="img-responsive" src="~/Images/Port_Chip.png" alt="">
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row sinfo">
-            <div class="col-lg-3 col-lg-offset-1">
-                <p>
-                    Our friends at Chip Destroyer approached us in need of two solutions.
-                    1: A customer facing website to send potential customers to with information about their unique
-                    subscription plan and story the behind their business.
-                    As well as a way for customers to contact them for either sales inquiries or service.
-                    2: A customer database to handle all their subscriptions set up through a merchant
-                    service which could handle payments from all major credit cards.
-                </p>
-            </div>
-
-            <div class="col-lg-3">
-                <p>
-                    With that, we set out to build chipdestroyer.ca, a
-                    custom marketing website with the power of a customer database in the background.
-                    chipdestroyer.ca gives customers all the required information while giving the group
-                    over at Chip Destroyer the ability to track and report on all service, payments, etc through the
-                    chipdestroyer.ca admin portal. Some other features within the admin panel include user management
-                    and control of all subscriptions past and present.
-                </p>
-            </div>
-
-            <div class="col-lg-4">
-                <h6>chipdestroyer.ca</h6>
-                <p>
-                    <strong>Completed:</strong> DEC 2016 <br />
-                    <strong>Work:</strong> Web Design & Development <br />
-                    <strong>Team:</strong>Yang Liu, Colby Armstrong, Connor England<br /><br />
-                    <a href="http://chipdestroyer.ca/" target="_blank" class="btn btn-primary">Visit Site</a>
-                </p>
-            </div>
-        </div>
-        <hr>
-    </div>
-</div>
-
-<!-- ========== GOLIBERTY ========== -->
+﻿<!-- ========== GOLIBERTY ========== -->
 <div>
     <div class="container">
         <div class="row centered">
@@ -85,33 +24,32 @@
 
     <div class="container">
         <div class="row sinfo">
-            <div class="col-lg-3 col-lg-offset-1">
+            <div class="col-lg-6 col-lg-offset-1">
                 <p>
                     Liberty’s sales pay structure is focused on a commission based system.
                     When they approached us they had multiple staff spending countless
                     hours handling complex Excel spreadsheets for each sales representative
                     to calculate their commission. It was a painfully slow process which they
                     believed could surely be optimized and automated.
-                </p>
-            </div>
-
-            <div class="col-lg-3">
-                <p>
+					<br> <br>
                     We set out to create an easy way for all stakeholder to easily manage
                     all commission-related information whether it be creating commission
                     entities, viewing your commission and how the parameters were calculated
                     to get to your commission or actually getting the final numbers to actually
                     set up payroll. We also wanted to be sure that the upper management could
-                    view this information in a meaningful way via some custom reports.E
+                    view this information in a meaningful way via some custom reports.
+					<br> <br>
+					Today GoLiberty has grown with many extensive features such as a scheduler used nationwide
+					for technicians, sales tools, multiple API's to external services such as TransUnion and
+					DocuSign, and advanced reporting for management.
                 </p>
             </div>
-
             <div class="col-lg-4">
-                <h6>goliberty.ca (Contact For Demo)</h6>
                 <p>
-                    <strong>Completed:</strong> MAR 2016 <br />
+                    <strong>Completed:</strong> Initial Release March 2016. Development still in progress <br />
                     <strong>Work:</strong> Web Design & Development <br />
                     <strong>Team:</strong> Colby Armstrong, Connor England<br /><br />
+					<a href="contact.html">@Html.ActionLink("Contact For Demo", "Contact", "Home", new { area = "" }, new { @class = "btn btn-embossed btn-primary" })</a>
                 </p>
             </div>
         </div>
@@ -119,9 +57,66 @@
     </div>
 </div>
 
+<!-- ========== CHIP DESTROYER ========== -->
+<div>
+    <div class="container">
+        <div class="row centered">
+            <br>
+            <br>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h3>CHIP DESTROYER</h3>
+                <p class="lead">
+                    Chip Destroyer is a locally owned
+                    and operated windshield repair service. They are unique
+                    in that they offer subscription plans and will drive to any
+                    location to repair your windshield.
+                </p>
+            </div>
+            <br>
+
+            <div class="col-lg-10 col-lg-offset-1">
+                <img class="img-responsive" src="~/Images/Port_Chip.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row sinfo">
+            <div class="col-lg-6 col-lg-offset-1">
+                <p>
+                    Our friends at Chip Destroyer approached us in need of two solutions.
+                    1: A customer facing website to send potential customers to with information about their unique
+                    subscription plan and story the behind their business.
+                    As well as a way for customers to contact them for either sales inquiries or service.
+                    2: A customer database to handle all their subscriptions set up through a merchant
+                    service which could handle payments from all major credit cards.
+					<br><br>
+                    With that, we set out to build chipdestroyer.ca, a
+                    custom marketing website with the power of a customer database in the background.
+                    chipdestroyer.ca gives customers all the required information while giving the group
+                    over at Chip Destroyer the ability to track and report on all service, payments, etc through the
+                    chipdestroyer.ca admin portal. Some other features within the admin panel include user management
+                    and control of all subscriptions past and present.
+                </p>
+            </div>
+
+            <div class="col-lg-4">
+                <p>
+                    <strong>Completed:</strong> FEB 2017 <br />
+                    <strong>Work:</strong> Web Design & Development <br />
+                    <strong>Team:</strong>Yang Liu, Colby Armstrong, Connor England<br /><br />
+					<a href="contact.html">@Html.ActionLink("Contact For Demo", "Contact", "Home", new { area = "" }, new { @class = "btn btn-embossed btn-primary" })</a>
+                </p>
+            </div>
+        </div>
+        <hr>
+    </div>
+</div>
+
+@*
 <!-- ========== MYAXIS ========== -->
 <div>
-    @*<div class="container">
+    <div class="container">
             <div class="row centered">
                 <br>
                 <br>
@@ -148,17 +143,18 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <h6>Contact For Demo</h6>
                     <p>
                         <strong>Completed</strong> APR 2017 <br />
                         <strong>Work:</strong> Web Design & Development <br />
                         <strong>Team:</strong> Colby Armstrong, Connor England, Yang Liu, George Wang<br /><br />
+						<a href="contact.html">@Html.ActionLink("Contact For Demo", "Contact", "Home", new { area = "" }, new { @class = "btn btn-embossed btn-primary" })</a>
                     </p>
                 </div>
             </div>
             <hr>
-        </div>*@
+        </div>
 </div>
+*@
 
 <!-- ========== SPCOMM ========== -->
 <div>
@@ -192,11 +188,11 @@
             </div>
 
             <div class="col-lg-4">
-                <h6>Contact For Demo</h6>
                 <p>
                     <strong>Completed:</strong> APR 2016 <br />
                     <strong>Work:</strong> Web Design & Development <br />
                     <strong>Team:</strong> Colby Armstrong<br /><br />
+					<a href="contact.html">@Html.ActionLink("Contact For Demo", "Contact", "Home", new { area = "" }, new { @class = "btn btn-embossed btn-primary" })</a>
                 </p>
             </div>
         </div>
@@ -238,11 +234,11 @@
             </div>
 
             <div class="col-lg-4">
-                <h6>Contact For Demo</h6>
                 <p>
                     <strong>Completed:</strong> DEC 2016 <br />
                     <strong>Work:</strong> Web Design & Development <br />
                     <strong>Team:</strong> Colby Armstrong, Deep Grewal, Haley Sommer, Satpreet Birah, George Wang<br /><br />
+					<a href="contact.html">@Html.ActionLink("Contact For Demo", "Contact", "Home", new { area = "" }, new { @class = "btn btn-embossed btn-primary" })</a>
                 </p>
             </div>
         </div>
